--- a/public/html/Quiz.html
+++ b/public/html/Quiz.html
@@ -8,7 +8,7 @@
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
         crossorigin="anonymous"></script>
         <script src="./javascripts/index.js"></script>
-        <link rel="stylesheet" href="../css/"/>
+        <link rel="stylesheet" href="../css/index.css"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
@@ -38,6 +38,39 @@
             </div>
         </div>
 <!-- Menu end -->
+
+<div class="quiz-container">
+    <div class="quiz-holder">
+        <div class="quiz-heading">
+            <p class="quiz-heading-text">Quiz</p>
+        </div>
+        <div class="quiz-question-holder">
+            <div class="line-1-1">
+                <p class="quiz-question-text">Indigenous people's</p>
+            </div>
+            <div class="line-2-1">
+                <p class="quiz-question-text">pay taxes</p>
+            </div>
+        </div>
+        <div id="answer-1">
+            <div class="answer-holder">
+                <p class="answer-text-1-class" id="answer-text-1">All indigenous people are required to pay taxed like all other canadians. There are exceptions for those who have a Status Card in very specific situations, such as when they purchase goods and and services on a reserve or earn their income on a reserve.</p>
+            </div>
+        </div>
+        <div class="quiz-answer">
+            <button id="true1">True</button>
+            <button id="false1">False</button>
+        </div>
+        <div class="quiz-button">
+            <button class="button-quiz"></button>
+            <button class="button-quiz"></button>
+            <button class="button-quiz"></button>
+            <button class="button-quiz"></button>
+            <button class="button-quiz"></button>
+        </div>
+    </div>
+</div>
+
     </body>
 
 </html>
