menu complete + implemented on all pages

--- a/public/html/katize.html
+++ b/public/html/katize.html
@@ -8,6 +8,11 @@
     <title>Document</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/index.css">
+    <script
+    src="https://code.jquery.com/jquery-3.6.0.min.js"
+    integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+    crossorigin="anonymous"></script>
+    <script src="../javascripts/index.js"></script>
 </head>
 <body>
     <div class="menu-container">
@@ -26,7 +31,17 @@
                 <a class="nav-link" href="main.html">Territories</a>
                 <a class="nav-link" href="Quiz.html">Quiz</a>
             </div>
-
+            <img src="../Img/menu.svg" id="menuIcon" />
+            
+        </div>
+    </div>
+    <div id="panelCont">
+        <div id="panel">
+            <img src="../Img/close.svg" id="close"/>
+            <div id="menuLinks">
+                <a href="main.html" class="panelLink">Territories</a>
+                <a href="Quiz.html" class="panelLink">Quiz</a>
+            </div>
         </div>
     </div>
     
