--- a/public/html/layout.html
+++ b/public/html/layout.html
@@ -19,25 +19,35 @@
 
     <body>
  <!-- Menu -->
-        <div class="menu-container">
-            <div class="menu-holder">
+    <div class="menu-container">
+        <div class="menu-holder">
 
-                <div id="menu-left" class="menu-category">
-                    <div class="logo-holder" id="logo-holder">
-                        <img id="logo" src="../Img/natiive-logo.png"/>
-                    </div>
-                    <div class="logo-holder" id="logo-text">
-                        <p>natiive</p>
-                    </div>
+            <div id="menu-left" class="menu-category">
+                <div class="logo-holder" id="logo-holder">
+                    <img id="logo" src="../Img/natiive-logo.png"/>
                 </div>
-
-                <div id="navigation" class="menu-category">
-                    <a class="nav-link" href="#">Territories</a>
-                    <a class="nav-link" href="#">Quiz</a>
+                <div class="logo-holder" id="logo-text">
+                    <p>natiive</p>
                 </div>
+            </div>
 
+            <div id="navigation" class="menu-category">
+                <a class="nav-link" href="main.html">Territories</a>
+                <a class="nav-link" href="Quiz.html">Quiz</a>
+            </div>
+            <img src="../Img/menu.svg" id="menuIcon" />
+            
+        </div>
+    </div>
+    <div id="panelCont">
+        <div id="panel">
+            <img src="../Img/close.svg" id="close"/>
+            <div id="menuLinks">
+                <a href="main.html" class="panelLink">Territories</a>
+                <a href="Quiz.html" class="panelLink">Quiz</a>
             </div>
         </div>
+    </div>
 <!-- Menu end -->
 
 
