--- a/public/html/main.html
+++ b/public/html/main.html
@@ -36,8 +36,16 @@
             
         </div>
     </div>
-    <div id="panelCont"></div>
-    
+    <div id="panelCont">
+        <div id="panel">
+            <img src="../Img/close.svg" id="close"/>
+            <div id="menuLinks">
+                <a href="main.html" class="panelLink">Territories</a>
+                <a href="Quiz.html" class="panelLink">Quiz</a>
+            </div>
+        </div>
+    </div>
+
     <!-- Menu Ends -->
     <div class="container">
 
