Completed results page

--- a/public/html/FinalQuiz.html
+++ b/public/html/FinalQuiz.html
@@ -54,54 +54,41 @@
 <!-- Quiz start -->
         <div id="quiz-container">
             <div class="arrow-holder">
-                <a href="../html/Quiz4.html" class="left-arrow arrow">                    
-                    <img src="../Img/arrow_left.svg" alt="left arrow" class="arrow-img">
+                <a href="../html/Quiz5.html" class="left-arrow arrow">                    
+                    <img src="../Img/arrow_left.svg" alt="left arrow" class="arrow-img left-arrow-img">
                 </a>
             </div>
 
             <div class="quiz-inner-container">
                 <div class="quiz-holder">
                     <div class="quiz-heading">
-                        <p class="quiz-heading-text">Quiz</p>
+                        <p class="quiz-heading-text">Results</p>
                     </div>
                     <div class="quiz-question-holder">
-                        <div class="line-1-5">
-                            <p class="quiz-question-text">Do all Indigenous peoples get a</p>
-                        </div>
-                        <div class="line-2-5">
-                            <p class="quiz-question-text">free university education?</p>
+                        <div class="line-1-1">
+                            <p class="quiz-question-text">You got 5/5</p>
                         </div>
                     </div>
-                    <div id="answer-1-5">
+                    <div id="answer-1">
                         <div class="answer-holder">
-                            <p class="answer-text-1-class hide" id="answer-text">
-                                Some Indigenous people may get money for school if they have a Status Card and if their First Nation has money to fund all or part of their post-secondry degree. 
-                                Many receive no help at all from their communities or the government.
+                            <p class="answer-text-1-class" id="answer-text">
+                                Congratulations! Being aware of both pre-contact and post-contact history, cultural differences, beliefs, values and traditions of Indigenous Peoples in Canada is the first step towards understanding Indigenous Peoples as individuals. The percentage of the population in Canada represented by those of Indigenous identity is estimated to rise to between 1.7 million and 2.2 million by 2031 or, between 4.0% and 5.3% of the total population. Why wouldn’t you want to be well informed and knowledgeable about the fastest growing segment of the population?
                             </p>
+                            <a href="#" class="answer-text-1-class" id="see-results">
+                                See your results
+                            </a>
                         </div>
-                    </div>
-                    <div class="quiz-answer">
-                        <button id="false" class="true">False</button>
-                        <button id="true" class="false">True</button>
-                    </div>
-                    <div class="quiz-button">
-                        <button class="button-quiz"></button>
-                        <button class="button-quiz"></button>
-                        <button class="button-quiz"></button>
-                        <button class="button-quiz"></button>
-                        <button class="button-quiz select"></button>
                     </div>
                 </div>
             </div> 
                     
             <div class="arrow-holder">
-                <a href="../html/FinalQuiz.html" class="right-arrow arrow"> 
+                <a href="../html/Quiz2.html" class="right-arrow arrow"> 
                     <img src="../Img/arrow_right.svg" alt="right arrow" class="arrow-img">
                 </a>
             </div>
         </div>
 <!-- Quiz end -->
-
     </body>
 
 </html>
