homepage link fixes for every page

--- a/public/html/layout.html
+++ b/public/html/layout.html
@@ -36,7 +36,7 @@
             </div>
             <!-- menu for web -->
             <div id="navigation" class="menu-category">
-                <a class="nav-link" href="main.html">Territories</a>
+                <a class="nav-link" href="index.html">Territories</a>
                 <a class="nav-link" href="Quiz.html">Quiz</a>
             </div>
             <img src="../Img/menu.svg" id="menuIcon" />
@@ -47,7 +47,7 @@
         <div id="panel">
             <img src="../Img/close.svg" id="close"/>
             <div id="menuLinks">
-                <a href="main.html" class="panelLink">Territories</a>
+                <a href="index.html" class="panelLink">Territories</a>
                 <a href="Quiz.html" class="panelLink">Quiz</a>
             </div>
         </div>
