Map title fix, put text into paragraph element

--- a/public/html/territory-katize.html
+++ b/public/html/territory-katize.html
@@ -53,7 +53,7 @@
 
     <div class="container">
         <div class="first-head">
-            Which Territory Do You Want to Visit?
+            <p>Territory Do You Want to Visit?</p>
         </div>
         <div class="mapcont">
             <img class="mapimg" src="/public/Img/Map.png" alt="Map">
