--- a/public/html/territory-musqueam.html
+++ b/public/html/territory-musqueam.html
@@ -50,7 +50,8 @@
     <!-- Menu Ends -->
     <div class="container">
         <div class="first-head">
-            This is the land of&nbsp;<span class="terri">Musqueam</span>
+            <p>This is the land of Musqueam</p>
+            <!-- This is the land of&nbsp;<span class="terri">Musqueam</span> -->
         </div>
         <div class="mapcont">
             <img class="mapimg" src="../Img/Musqueam.png" alt="Map">
