--- a/public/html/territory-squamish.html
+++ b/public/html/territory-squamish.html
@@ -52,7 +52,7 @@
 
     <div class="container">
         <div class="first-head">
-            Which Territory Do You Want to Visit?
+            <p>Which Territory Do You Want to Visit?</p>
         </div>
         <div class="mapcont">
             <img class="mapimg" src="/public/Img/Map.png" alt="Map">
