--- a/public/html/Quiz.html
+++ b/public/html/Quiz.html
@@ -38,7 +38,7 @@
                 </div>
                 <!-- menu for web -->
                 <div id="navigation" class="menu-category">
-                    <a href="index.html" class="panelLink">Territories</a>
+                    <a class="nav-link" href="index.html">Territories</a>
                     <a class="nav-link" href="Quiz.html">Quiz</a>
                 </div>
                 <img src="../Img/menu.svg" id="menuIcon" />
