--- a/public/html/territory-tsawwassen.html
+++ b/public/html/territory-tsawwassen.html
@@ -57,7 +57,7 @@
             
         </div>
         <div class="mapcont">
-            <img class="mapimg" src="/public/Img/Map.png" alt="Map">
+            <img class="mapimg" src="../Img/Tsawwassen.png" alt="Map">
             <div class="territories">
                 <a href="territory-musqueam.html">Musqueam</a>
                 <a href="territory-squamish.html">Squamish</a>
