--- a/public/html/territory-tsleil.html
+++ b/public/html/territory-tsleil.html
@@ -56,7 +56,7 @@
         <p>Which Territory Do You Want to Visit?</p>   
     </div>
     <div class="mapcont">
-        <img class="mapimg" src="/public/Img/Map.png" alt="Map">
+        <img class="mapimg" src="../Img/Tsleil-Waututh.png" alt="Map">
         <div class="territories">
             <a href="territory-musqueam.html">Musqueam</a>
             <a href="territory-squamish.html">Squamish</a>
