--- a/public/html/territory-musqueam.html
+++ b/public/html/territory-musqueam.html
@@ -63,7 +63,7 @@
                 <a href="territory-katzie.html">Katize</a>
             </div>
         </div>
-        <div class="infocont">
+        <div class="infocont2">
             <div class="title">
                 Musqueam <span class="pronoun">[Pronounciation]</span>
             </div>
