territory information inputted

--- a/public/html/territory-musqueam.html
+++ b/public/html/territory-musqueam.html
@@ -51,7 +51,6 @@
     <div class="container">
         <div class="first-head">
             <p>This is the land of Musqueam</p>
-            <!-- This is the land of&nbsp;<span class="terri">Musqueam</span> -->
         </div>
         <div class="mapcont">
             <img class="mapimg" src="../Img/Musqueam.png" alt="Map">
@@ -65,30 +64,38 @@
         </div>
         <div class="infocont2">
             <div class="title">
-                Musqueam <span class="pronoun">[Pronounciation]</span>
+                <span>Musqueam </span><span class="pronoun">[mus-kwee-um]</span>
             </div>
 
             <div class="lists">
-                <div class="languages">
-                    <p>Languages they use</p>
+                <div class="cities">
+                    <p>Cities on this Territory:</p>
                     <ul>
-                        <li>a</li>
-                        <li>b</li>
-                        <li>c</li>
+                        <li>Vancouver</li>
+                        <li>North Vancouver</li>
+                        <li>South Vancouver</li>
+                        <li>New Westminster</li> 
+                        <li>Burrard Inlet</li>
+                        <li>Burnaby</li>
+                        <li>Richmond</li>
                     </ul>
                 </div>
-                <div class="cities">
-                    <p>Cities on this territory</p>
+                <div class="languages">
+                    <p>Languages Spoken:</p>
                     <ul>
-                        <li>a</li>
-                        <li>b</li>
-                        <li>c</li>
+                        <li>Hən̓q̓əmin̓əm̓</li>
                     </ul>
                 </div>
             </div>
 
             <div class="para">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                <p>
+                    Musqueam’s ancestors have lived in the Fraser River estuary for thousands of years.Today, the Musqueam people has a strong, growing community of over 1300 members. <br/><br/>
+                    The name Musqueam relates back to the flowering plant, məθkʷəy̓, which grows in the Fraser River estuary.  There is a sχʷəy̓em̓ that has been passed on from generation to generation that explains how we became known as the xʷməθkʷəy̓əm – People of the məθkʷəy̓ plant.<br/><br/>
+                    The old people spoke of a small lake called xʷməm̓qʷe:m (Camosun Bog) where the sʔi:ɬqəy̓ (double-headed serpent) originated. They were warned as youth to be cautious and not go near or they would surely die. This sʔi:ɬqəy̓ was so massive its winding path from the lake to the stal̕əw̓ (river) became the creek flowing through Musqueam to this day. Everything the serpent passed over died and from its droppings bloomed a new plant, the məθkʷəy̓.<br/><br/>
+                    
+                    For this reason, the people of long ago named that place xʷməθkʷəy̓əm (Musqueam – place of the məθkʷəy̓).
+                    </p>
             </div>
 
         </div>
