--- a/public/html/territory-squamish.html
+++ b/public/html/territory-squamish.html
@@ -67,30 +67,36 @@
 
     <div class="infocont">
         <div class="title">
-            Squamish <span class="pronoun">[Pronounciation]</span>
+            <span>Squamish </span><span class="pronoun">[skwaa-muhsh]</span>
         </div>
-
+        
         <div class="lists">
-            <div class="languages">
-                <p>Languages they use</p>
+            <div class="cities">
+                <p>Cities on this Territory:</p>
                 <ul>
-                    <li>a</li>
-                    <li>b</li>
-                    <li>c</li>
+                    <li>Pitt Watershed</li>
+                    <li>Alouette watershed</li>
+                    <li>Pitt Meadows</li>
+                    <li>Maple Ridge</li> 
+                    <li>Surrey</li>
+                    <li>Langley</li>
                 </ul>
             </div>
-            <div class="cities">
-                <p>Cities on this territory</p>
+            <div class="languages">
+                <p>Languages Spoken:</p>
                 <ul>
-                    <li>a</li>
-                    <li>b</li>
-                    <li>c</li>
+                    <li>Hən̓q̓əmin̓əm̓</li>
                 </ul>
             </div>
         </div>
 
         <div class="para">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+            <p>The Squamish Nation, as a government, has existed since 1923. In our language, we are called Sḵwx̱wú7mesh Úxwumixw. Prior to 1923, the Squamish People were socially, economically, and politically organized into several physical communities called an úxwumixw (“village; people”) in the territory of the Squamish People.<br/><br/>
+
+                Our people’s history spans many millennia of living and governing our territory. The oldest archaeological site in the territory of the Squamish People is 8,600 years old at Porteau Cove in the Howe Sound. Our oral literature speaks to our origins as a people in our lands through the stories of the first ancestors of the Squamish People. Our people consider ourselves descendants of those first Squamish ancestors who were made or appeared in different parts of Squamish territory.<br/><br/>
+                
+                Squamish culture has been created from our lands, waters, and people over generations. Our people continue to practice many of the traditions, customs, and ways of our ancestors and pass them on to future generations.
+                </p>
         </div>
 
     </div>
