--- a/public/html/territory-tsawwassen.html
+++ b/public/html/territory-tsawwassen.html
@@ -71,30 +71,37 @@
 
     <div class="infocont">
         <div class="title">
-            Tsawwassen <span class="pronoun">[Pronounciation]</span>
+            <span>Tsawwassen </span><span class="pronoun">[tah-wass-en] or [sa-wass-en]</span>
         </div>
 
         <div class="lists">
-            <div class="languages">
-                <p>Languages they use</p>
+            <div class="cities">
+                <p>Cities on this Territory:</p>
                 <ul>
-                    <li>a</li>
-                    <li>b</li>
-                    <li>c</li>
+                    <li>Richmond</li>
+                    <li>Delta</li>
+                    <li>Surrey</li>
+                    <li>Langley</li> 
+                    <li>Gulf Islands</li>
+                    <li>New Westminister</li>
+                    <li>Pitt Meadows</li>
+                    <li>Pitt Lake</li>
                 </ul>
             </div>
-            <div class="cities">
-                <p>Cities on this territory</p>
+            <div class="languages">
+                <p>Languages Spoken:</p>
                 <ul>
-                    <li>a</li>
-                    <li>b</li>
-                    <li>c</li>
+                    <li>Hən̓q̓əmin̓əm̓</li>
                 </ul>
             </div>
         </div>
 
         <div class="para">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+            <p>
+                “Tsawwassen” means “land facing the sea”. For thousands of years, Tsawwassen people travelled the Lower Fraser River, and Salish Sea (Georgia Straight). They have 491 Members as of our last count (March 2019), with nearly half living on Tsawwassen Lands (215). Traditionally, our resources were based on fish. Salmon, sturgeon, crab, and eulachon were our primary food resources and remain a key part of our traditional lifestyle. We still harvest salmon, crab and eulachon. Fish continues to provide for cultural and social processes that are very important to our identity, our past and our future.<br/><br/>
+                Traditionally, food was abundant. For centuries, we had a trade and barter system, and specialized services, such as processing of resources, were exchanged. Through our longhouse culture, we had extensive practices and ceremonies that dealt with governance functions. Our longhouse systems also ensured the redistribution of wealth to make certain our people could survive. Experts continue to learn how complex these practices were and still are.<br/><br/>
+                 
+                On April 3, 2009, the Tsawwassen People ratified the first urban First Nations Treaty in B.C. It was the culmination of 14 years of negotiations. It reconciled our aboriginal rights and title and restored our right to First Nation self-government, protected in the Canadian Constitution. The Treaty provides us with municipal, provincial and federal types of jurisdiction over a land base of 724 hectares. So far, we have 23 laws that replace the Indian Act on Tsawwassen Lands and in our traditional territory. Tsawwassen First Nation also became a full member of the Metro Vancouver regional district, now Metro Vancouver, the first First Nation to do so.</p>
         </div>
 
     </div>
