--- a/public/html/territory-tsleil.html
+++ b/public/html/territory-tsleil.html
@@ -70,30 +70,38 @@
 
     <div class="infocont">
         <div class="title">
-            Tseli-Waututh <span class="pronoun">[Pronounciation]</span>
+            <span>Tseli-Waututh </span><span class="pronoun">[slay-wah-tooth]</span>
         </div>
 
         <div class="lists">
-            <div class="languages">
-                <p>Languages they use</p>
+            <div class="cities">
+                <p>Cities on this Territory:</p>
                 <ul>
-                    <li>a</li>
-                    <li>b</li>
-                    <li>c</li>
+                    <li>New Westminister</li>
+                    <li>Coquitlam</li>
+                    <li>Port Moody</li>
+                    <li>Burnaby</li> 
+                    <li>Vancouver</li>
+                    <li>West Vancouver</li>
+                    <li>North Vancouver</li>                    
                 </ul>
             </div>
-            <div class="cities">
-                <p>Cities on this territory</p>
+            <div class="languages">
+                <p>Languages Spoken:</p>
                 <ul>
-                    <li>a</li>
-                    <li>b</li>
-                    <li>c</li>
+                    <li>Hən̓q̓əmin̓əm̓</li>
                 </ul>
             </div>
         </div>
 
         <div class="para">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. 
+            <p>
+                The literal translation of Tsleil-Waututh is “The People of the Inlet”. The Tsleil-Waututh Nation is one of many groups of Coast Salish peoples living in the Pacific Northwest, throughout British Columbia, Washington, and Oregon. Their knowledge of the lands and waters of our territory has shaped their people.<br/><br/>
+                
+                For generations, the səlil̓ilw̓ətaʔɬ have hunted, gathered, and managed the landscape, and made their homes in the watersheds of səl̓ilw̓ət. Today, the people continue to inhabit their traditional territories and embody a sacred trust and commitment to care for their lands and waters.<br/><br/>
+                
+                Today our nation is 500+ people strong and growing. We draw on the knowledge of our ancestors to remedy past wrongs, reclaim our territory and traditions, and advance into a bright future. We assert our Aboriginal rights and title and put the Tsleil-Waututh face back on our traditional territory in all we do.
+                </p>
         </div>
 
     </div>
