map page layouts fixed

--- a/public/html/territory-musqueam.html
+++ b/public/html/territory-musqueam.html
@@ -50,7 +50,7 @@
     <!-- Menu Ends -->
     <div class="container">
         <div class="first-head">
-            <p>This is the land of Musqueam</p>
+            <p>This is the land of Musqueam.</p>
         </div>
         <div class="mapcont">
             <img class="mapimg" src="../Img/Musqueam.png" alt="Map">
@@ -62,6 +62,7 @@
                 <a href="territory-katzie.html">Katize</a>
             </div>
         </div>
+
         <div class="infocont2">
             <div class="title">
                 <span>Musqueam </span><span class="pronoun">[mus-kwee-um]</span>
