--- a/public/html/territory-squamish.html
+++ b/public/html/territory-squamish.html
@@ -50,7 +50,7 @@
     <!-- Menu Ends -->
     <div class="container">
         <div class="first-head">
-            <p>Which Territory Do You Want to Visit?</p>
+            <p>This is the Land of the Squamish.</p>
         </div>
         <div class="mapcont">
             <img class="mapimg" src="../Img/Squamish.png" alt="Map">
