--- a/public/html/territory-tsawwassen.html
+++ b/public/html/territory-tsawwassen.html
@@ -53,7 +53,7 @@
 
     <div class="container">
         <div class="first-head">
-            <p>Which Territory Do You Want to Visit?</p>
+            <p>This is the Land of the Tsawwassen.</p>
             
         </div>
         <div class="mapcont">
