--- a/public/html/territory-tsleil.html
+++ b/public/html/territory-tsleil.html
@@ -53,7 +53,7 @@
     
 <div class="container">
     <div class="first-head">
-        <p>Which Territory Do You Want to Visit?</p>   
+        <p>This is the Territory of the Tsleil-Waututh.</p>   
     </div>
     <div class="mapcont">
         <img class="mapimg" src="../Img/Tsleil-Waututh.png" alt="Map">
