--- a/public/html/index.html
+++ b/public/html/index.html
@@ -50,10 +50,10 @@
     <!-- Menu Ends -->
     <div class="container">
         <div class="first-head">
-            Which Territory Do You Want to Visit?
+            <p>Which Territory Do You Want to Visit?</p>
         </div>
         <div class="mapcont">
-            <img class="mapimg" src="/public/Img/Map.png" alt="Map">
+            <img class="mapimg" src="../Img/Map.png" alt="Map">
             <div class="territories">
                 <a href="territory-musqueam.html">Musqueam</a>
                 <a href="territory-squamish.html">Squamish</a>
