--- a/public/html/territory-katzie.html
+++ b/public/html/territory-katzie.html
@@ -53,7 +53,7 @@
 
     <div class="container">
         <div class="first-head">
-            <p>Territory Do You Want to Visit?</p>
+            <p>This is the Land of the Katzie.</p>
         </div>
         <div class="mapcont">
             <img class="mapimg" src="../Img/Katize.png" alt="Map">
