--- a/public/Quiz5.html
+++ b/public/Quiz5.html
@@ -6,8 +6,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Natiive - Quiz</title>
         <!-- stylesheets -->
-        <link rel="stylesheet" href="../css/style.css">
-        <link rel="stylesheet" href="../css/index.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/index.css">
     
         <!-- javascript -->
         <script
@@ -16,7 +16,7 @@
         crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <script src="../javascripts/index.js"></script>
+        <script src="javascripts/index.js"></script>
 
         <!-- google fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -31,7 +31,7 @@
             <div class="menu-holder">
                 <div id="menu-left" class="menu-category">
                     <div class="logo-holder" id="logo-holder">
-                        <img id="logo" src="../Img/natiive-logo.png"/>
+                        <img id="logo" src="Img/natiive-logo.png"/>
                     </div>
                     <div class="logo-holder" id="logo-text">
                         <p>natiive</p>
@@ -42,13 +42,13 @@
                     <a class="nav-link" href="index.html">Territories</a>
                     <a class="nav-link" href="Quiz.html">Quiz</a>
                 </div>
-                <img src="../Img/menu.svg" id="menuIcon" />
+                <img src="Img/menu.svg" id="menuIcon" />
             </div>
         </div>
         <!-- menu panel for mobile -->
         <div id="panelCont">
             <div id="panel">
-                <img src="../Img/close.svg" id="close"/>
+                <img src="Img/close.svg" id="close"/>
                 <div id="menuLinks">
                     <a href="index.html" class="panelLink">Territories</a>
                     <a href="Quiz.html" class="panelLink">Quiz</a>
@@ -61,8 +61,8 @@
 <!-- Quiz start -->
         <div id="quiz-container">
             <div class="arrow-holder">
-                <a href="../html/Quiz4.html" class="left-arrow arrow">                    
-                    <img src="../Img/arrow_left.svg" alt="left arrow" class="arrow-img">
+                <a href="html/Quiz4.html" class="left-arrow arrow">                    
+                    <img src="Img/arrow_left.svg" alt="left arrow" class="arrow-img">
                 </a>
             </div>
 
@@ -101,8 +101,8 @@
             </div> 
                     
             <div class="arrow-holder">
-                <a href="../html/FinalQuiz.html" class="right-arrow arrow"> 
-                    <img src="../Img/arrow_right.svg" alt="right arrow" class="arrow-img">
+                <a href="html/FinalQuiz.html" class="right-arrow arrow"> 
+                    <img src="Img/arrow_right.svg" alt="right arrow" class="arrow-img">
                 </a>
             </div>
         </div>
