--- a/public/layout.html
+++ b/public/layout.html
@@ -6,15 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Natiive</title>
     <!-- stylesheets -->
-    <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="../css/index.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/index.css">
 
     <!-- javascript -->
     <script
     src="https://code.jquery.com/jquery-3.6.0.min.js"
     integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
     crossorigin="anonymous"></script>
-    <script src="../javascripts/index.js"></script>
+    <script src="javascripts/index.js"></script>
 
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +28,7 @@
         <div class="menu-holder">
             <div id="menu-left" class="menu-category">
                 <div class="logo-holder" id="logo-holder">
-                    <img id="logo" src="../Img/natiive-logo.png"/>
+                    <img id="logo" src="Img/natiive-logo.png"/>
                 </div>
                 <div class="logo-holder" id="logo-text">
                     <p>natiive</p>
@@ -39,13 +39,13 @@
                 <a class="nav-link" href="index.html">Territories</a>
                 <a class="nav-link" href="Quiz.html">Quiz</a>
             </div>
-            <img src="../Img/menu.svg" id="menuIcon" />
+            <img src="Img/menu.svg" id="menuIcon" />
         </div>
     </div>
     <!-- menu panel for mobile -->
     <div id="panelCont">
         <div id="panel">
-            <img src="../Img/close.svg" id="close"/>
+            <img src="Img/close.svg" id="close"/>
             <div id="menuLinks">
                 <a href="index.html" class="panelLink">Territories</a>
                 <a href="Quiz.html" class="panelLink">Quiz</a>
