updated html links and changed the questions

--- a/public/FinalQuiz.html
+++ b/public/FinalQuiz.html
@@ -59,7 +59,7 @@
 <!-- Quiz start -->
         <div id="quiz-container">
             <div class="arrow-holder">
-                <a href="html/Quiz5.html" class="left-arrow arrow">                    
+                <a href="Quiz5.html" class="left-arrow arrow">                    
                     <img src="Img/arrow_left.svg" alt="left arrow" class="arrow-img left-arrow-img">
                 </a>
             </div>
@@ -69,10 +69,10 @@
                     <div class="quiz-heading">
                         <p class="quiz-heading-text">Results</p>
                     </div>
-                    <div class="quiz-question-holder">
-                        <div class="line-1-1">
-                            <p class="quiz-question-text">You got 5/5</p>
-                        </div>
+                    <div class="quiz-question-holder anQuiz-holder">
+                        <p class="quiz-question-text">
+                            You got <span calss="quiz-number">?</span>/5
+                        </p>
                     </div>
                     <div id="answer-1">
                         <div class="answer-holder">
@@ -88,7 +88,7 @@
             </div> 
                     
             <div class="arrow-holder">
-                <a href="html/Quiz2.html" class="right-arrow arrow"> 
+                <a href="Quiz2.html" class="right-arrow arrow"> 
                     <img src="Img/arrow_right.svg" alt="right arrow" class="arrow-img">
                 </a>
             </div>
