--- a/public/Quiz2.html
+++ b/public/Quiz2.html
@@ -61,7 +61,7 @@
 <!-- Quiz start -->
         <div id="quiz-container">
             <div class="arrow-holder">
-                <a href="html/Quiz.html" class="left-arrow arrow">                    
+                <a href="Quiz.html" class="left-arrow arrow">                    
                     <img src="Img/arrow_left.svg" alt="left arrow" class="arrow-img">
                 </a>
             </div>
@@ -75,12 +75,13 @@
                     </div>
                     <div class="quiz-question-holder long-text">
                         <p class="quiz-question-text">
-                            Have Indigenous people had a written language?
+                           Indigenous people had a written language.
                         </p>
                     </div>
                     <div id="answer-1">
                         <div class="answer-holder">
                             <p class="answer-text-1-class answer-txt hide" id="answer-text">
+                                <span class="true-false">True</span>
                                 European and Asian writing systems are one way of transmitting information in visual symbols, but there are others. 
                                 Aboriginal people have used symbols and a variety of markings to communicate and tell a story. Totem poles are a great example of the useof visual language.
                             </p>
@@ -101,7 +102,7 @@
             </div> 
                             
             <div class="arrow-holder">
-                <a href="html/Quiz3.html" class="right-arrow arrow"> 
+                <a href="Quiz3.html" class="right-arrow arrow"> 
                     <img src="Img/arrow_right.svg" alt="right arrow" class="arrow-img">
                 </a>
             </div>
