--- a/public/Quiz3.html
+++ b/public/Quiz3.html
@@ -61,7 +61,7 @@
 <!-- Quiz start -->
         <div id="quiz-container">
             <div class="arrow-holder">
-                <a href="html/Quiz2.html" class="left-arrow arrow">                    
+                <a href="Quiz2.html" class="left-arrow arrow">                    
                     <img src="Img/arrow_left.svg" alt="left arrow" class="arrow-img">
                 </a>
             </div>
@@ -75,12 +75,13 @@
                     </div>
                     <div class="quiz-question-holder">
                         <p class="quiz-question-text">
-                            Did everything that happened to Indigenous people happen long ago?
+                            Everything that happened to Indigenous people happened long ago.
                         </p>
                     </div>
                     <div id="answer-1">
                         <div class="answer-holder">
                             <p class="answer-text-1-class hide" id="answer-text">
+                                <span class="true-false">False</span>
                                 Indigenous people are still dealing with the effects of colonization. For example, the Indian Act still controls many aspects of their lives and places limits on Indigenous people, and new developments happen in Indigenous communities and cultures every day.
                             </p>
                         </div>
@@ -100,7 +101,7 @@
             </div> 
                                     
             <div class="arrow-holder">
-                <a href="html/Quiz4.html" class="right-arrow arrow"> 
+                <a href="Quiz4.html" class="right-arrow arrow"> 
                     <img src="Img/arrow_right.svg" alt="right arrow" class="arrow-img">
                 </a>
             </div>
