--- a/public/Quiz4.html
+++ b/public/Quiz4.html
@@ -61,7 +61,7 @@
 <!-- Quiz start -->
         <div id="quiz-container">
             <div class="arrow-holder">
-                <a href="html/Quiz3.html" class="left-arrow arrow">                    
+                <a href="Quiz3.html" class="left-arrow arrow">                    
                     <img src="Img/arrow_left.svg" alt="left arrow" class="arrow-img">
                 </a>
             </div>
@@ -75,12 +75,13 @@
                     </div>
                     <div class="quiz-question-holder">
                         <p class="quiz-question-text">
-                            Are Indigenous people not all the same?
+                            Indigenous people are not all the same.
                         </p>
                     </div>
                     <div id="answer-1">
                         <div class="answer-holder">
                             <p class="answer-text-1-class hide" id="answer-text">
+                                <span class="true-false">True</span>
                                 Indigenous people across Canada are very diverse. They are composed of First Nations, Inuit, and Metis people.
                                 They speak over 50 different languages. They have a wide range of cultural practices and traditions.
                             </p>
@@ -101,7 +102,7 @@
             </div> 
             
             <div class="arrow-holder">
-                <a href="html/Quiz5.html" class="right-arrow arrow"> 
+                <a href="Quiz5.html" class="right-arrow arrow"> 
                     <img src="Img/arrow_right.svg" alt="right arrow" class="arrow-img">
                 </a>
             </div>
