--- a/public/Quiz.html
+++ b/public/Quiz.html
@@ -62,7 +62,7 @@
 <!-- Quiz start -->
         <div id="quiz-container">
             <div class="arrow-holder">
-                <a href="html/Quiz5.html" class="left-arrow arrow">                    
+                <a href="Quiz5.html" class="left-arrow arrow">                    
                     <img src="Img/arrow_left.svg" alt="left arrow" class="arrow-img left-arrow-img">
                 </a>
             </div>
@@ -76,12 +76,13 @@
                     </div>
                     <div class="quiz-question-holder">
                         <p class="quiz-question-text">
-                            Do Indigenous people pay taxes?
+                           Indigenous people pay taxes.
                         </p>
                     </div>
                     <div id="answer-1">
                         <div class="answer-holder">
                             <p class="answer-text-1-class answer-txt hide" id="answer-text">
+                                <span class="true-false">True</span>
                                 All indigenous people are required to pay taxed like all other canadians. There are exceptions for those who have a Status Card in very specific situations, such as when they purchase goods and and services on a reserve or earn their income on a reserve.
                             </p>
                         </div>
@@ -101,7 +102,7 @@
             </div> 
                     
             <div class="arrow-holder">
-                <a href="html/Quiz2.html" class="right-arrow arrow"> 
+                <a href="Quiz2.html" class="right-arrow arrow"> 
                     <img src="Img/arrow_right.svg" alt="right arrow" class="arrow-img">
                 </a>
             </div>
