--- a/public/Quiz5.html
+++ b/public/Quiz5.html
@@ -61,7 +61,7 @@
 <!-- Quiz start -->
         <div id="quiz-container">
             <div class="arrow-holder">
-                <a href="html/Quiz4.html" class="left-arrow arrow">                    
+                <a href="Quiz4.html" class="left-arrow arrow">                    
                     <img src="Img/arrow_left.svg" alt="left arrow" class="arrow-img">
                 </a>
             </div>
@@ -75,12 +75,13 @@
                     </div>
                     <div class="quiz-question-holder">
                         <p class="quiz-question-text">
-                            Do all Indigenous peoples get a free university education?
+                            All Indigenous people get a free university education.
                         </p>
                     </div>
                     <div id="answer-1">
                         <div class="answer-holder">
                             <p class="answer-text-1-class hide" id="answer-text">
+                                <span class="true-false">False</span>
                                 Some Indigenous people may get money for school if they have a Status Card and if their First Nation has money to fund all or part of their post-secondry degree. 
                                 Many receive no help at all from their communities or the government.
                             </p>
@@ -101,7 +102,7 @@
             </div> 
                     
             <div class="arrow-holder">
-                <a href="html/FinalQuiz.html" class="right-arrow arrow"> 
+                <a href="FinalQuiz.html" class="right-arrow arrow"> 
                     <img src="Img/arrow_right.svg" alt="right arrow" class="arrow-img">
                 </a>
             </div>
