Added ajax function

--- a/public/FinalQuiz.html
+++ b/public/FinalQuiz.html
@@ -88,7 +88,7 @@
             </div> 
                     
             <div class="arrow-holder">
-                <a href="Quiz2.html" class="right-arrow arrow"> 
+                <a href="Quiz.html" class="right-arrow arrow"> 
                     <img src="Img/arrow_right.svg" alt="right arrow" class="arrow-img">
                 </a>
             </div>
