--- a/public/Quiz.html
+++ b/public/Quiz.html
@@ -81,15 +81,14 @@
                     </div>
                     <div id="answer-1">
                         <div class="answer-holder">
-                            <p class="answer-text-1-class answer-txt hide" id="answer-text">
-                                <span class="true-false">True</span>
-                                All indigenous people are required to pay taxed like all other canadians. There are exceptions for those who have a Status Card in very specific situations, such as when they purchase goods and and services on a reserve or earn their income on a reserve.
+                            <p class="true-false hide">True</p>
+                            <p class="answer-text-1-class hide" id="answer-text">
                             </p>
                         </div>
                     </div>
                     <div class="quiz-answer">
                         <button id="false" class="false answer-bttn">False</button>
-                        <button id="true" class="true answer-bttn">True</button>
+                        <button id="true" class="true answer-bttn answer-one">True</button>
                     </div>
                     <div class="quiz-button">
                         <button class="button-quiz select"></button>
