--- a/public/Quiz2.html
+++ b/public/Quiz2.html
@@ -80,16 +80,14 @@
                     </div>
                     <div id="answer-1">
                         <div class="answer-holder">
-                            <p class="answer-text-1-class answer-txt hide" id="answer-text">
-                                <span class="true-false">True</span>
-                                European and Asian writing systems are one way of transmitting information in visual symbols, but there are others. 
-                                Aboriginal people have used symbols and a variety of markings to communicate and tell a story. Totem poles are a great example of the useof visual language.
+                            <p class="true-false hide">True</p>
+                            <p class="answer-text-1-class hide" id="answer-text">
                             </p>
                         </div>
                     </div>
                     <div class="quiz-answer">
                         <button id="false" class="false answer-bttn">False</button>
-                        <button id="true" class="true answer-bttn">True</button>
+                        <button id="true" class="true answer-bttn answer-two">True</button>
                     </div>
                     <div class="quiz-button">
                         <button class="button-quiz"></button>
