--- a/public/Quiz3.html
+++ b/public/Quiz3.html
@@ -80,14 +80,13 @@
                     </div>
                     <div id="answer-1">
                         <div class="answer-holder">
+                            <p class="true-false hide">False</p>
                             <p class="answer-text-1-class hide" id="answer-text">
-                                <span class="true-false">False</span>
-                                Indigenous people are still dealing with the effects of colonization. For example, the Indian Act still controls many aspects of their lives and places limits on Indigenous people, and new developments happen in Indigenous communities and cultures every day.
                             </p>
                         </div>
                     </div>
                     <div class="quiz-answer">
-                        <button id="false" class="true answer-bttn">False</button>
+                        <button id="false" class="true answer-bttn answer-three">False</button>
                         <button id="true" class="false answer-bttn">True</button>
                     </div>
                     <div class="quiz-button">
