--- a/public/Quiz4.html
+++ b/public/Quiz4.html
@@ -80,16 +80,14 @@
                     </div>
                     <div id="answer-1">
                         <div class="answer-holder">
+                            <p class="true-false hide">True</p>
                             <p class="answer-text-1-class hide" id="answer-text">
-                                <span class="true-false">True</span>
-                                Indigenous people across Canada are very diverse. They are composed of First Nations, Inuit, and Metis people.
-                                They speak over 50 different languages. They have a wide range of cultural practices and traditions.
                             </p>
                         </div>
                     </div>
                     <div class="quiz-answer">
                         <button id="false" class="false answer-bttn">False</button>
-                        <button id="true" class="true answer-bttn">True</button>
+                        <button id="true" class="true answer-bttn answer-four">True</button>
                     </div>
                     <div class="quiz-button">
                         <button class="button-quiz"></button>
