--- a/public/Quiz5.html
+++ b/public/Quiz5.html
@@ -80,15 +80,13 @@
                     </div>
                     <div id="answer-1">
                         <div class="answer-holder">
+                            <span class="true-false hide">False</span>
                             <p class="answer-text-1-class hide" id="answer-text">
-                                <span class="true-false">False</span>
-                                Some Indigenous people may get money for school if they have a Status Card and if their First Nation has money to fund all or part of their post-secondry degree. 
-                                Many receive no help at all from their communities or the government.
                             </p>
                         </div>
                     </div>
                     <div class="quiz-answer">
-                        <button id="false" class="true answer-bttn">False</button>
+                        <button id="false" class="true answer-bttn answer-five">False</button>
                         <button id="true" class="false answer-bttn">True</button>
                     </div>
                     <div class="quiz-button">
