--- a/public/Quiz.html
+++ b/public/Quiz.html
@@ -32,10 +32,14 @@
             <div class="menu-holder">
                 <div id="menu-left" class="menu-category">
                     <div class="logo-holder" id="logo-holder">
-                        <img id="logo" src="Img/natiive-logo.png"/>
+                        <a href="./index.html">
+                            <img id="logo" src="Img/natiive-logo.png"/>
+                        </a>
                     </div>
-                    <div class="logo-holder" id="logo-text">
-                        <p>natiive</p>
+                    <div class="logo-holder">
+                        <a href="./index.html">
+                            <p id="logo-text">natiive</p>
+                        </a>
                     </div>
                 </div>
                 <!-- menu for web -->
